# MPI_Samples

./: CMakeLists.txt  README.md  run.bat  vs16.bat
src/: 01_Hello.cpp  02_Example.cpp  CMakeLists.txt
